# zelda64recomp-achievements-mod

./: .gitignore  CMakeLists.txt  Makefile  Notes on gamesaves.txt  make_log.txt  make_python_functions.py  mod.toml
include/extlib/: lib_recomp.hpp
include/lib/: achievements_native.h  achievements_ui.h  basic_defs.h  menu_helpers.h
include/shared/: achievements.h
src/extlib/: AchievementController.cpp  AchievementController.hpp  AchievementFlag.hpp  AchievementFlagStorage.hpp  AchievementSet.hpp  AchievementWrapper.cpp  AchievementWrapper.hpp  CMakeLists.txt  kv.cpp  lib_main.cpp  main.cpp
src/extlib/ach_data/: AchievementController.cpp  AchievementController.hpp  AchievementFlag.cpp  AchievementFlag.hpp  AchievementSet.cpp  AchievementSet.hpp  AchievementWrapper.cpp  AchievementWrapper.hpp
src/lib/: achievements_ui.c  lib_main.c  menu_helpers.c
src/mod/: achievement_list.c  achievement_list.h  achievements.c  achievements_ui.c  achievements_ui.h  always_spin_attack.c  input_handling.c  input_handling.h  load_save_handling.c  mod_main.c  mod_main.h
src/mod/achievement_hooks/: hook_Item_Give.c  hook_great_fairy.c  hook_items.c
